[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikimark"
version = "0.1.0"
description = "A Python implementation of WikiMark, a strict superset of GitHub Flavored Markdown with wiki functionality."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Trellis Wiki", email = "noreply@trellis-wiki.org" },
]
keywords = ["markdown", "wikimark", "gfm", "commonmark", "wiki", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/trellis-wiki/wikimark-python"
Documentation = "https://github.com/trellis-wiki/wikimark-python"
Repository = "https://github.com/trellis-wiki/wikimark-python"
Issues = "https://github.com/trellis-wiki/wikimark-python/issues"
Specification = "https://github.com/trellis-wiki/wikimark"

[project.scripts]
wikimark = "wikimark.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wikimark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
